--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href=".css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="quiz-header">
+    <header>
+        <h1>Quiz App</h1>
+    </header>
+</section>
+    <section class="quiz-container">
+        <div class="quiz-question">
+          <h2 class="question">What property flips the axes in flexbox</h2>
+        </div>
+        <button>Show Answer</button>
+        <div class="container-tags">
+            <ul class="tags">
+                <li><a href="#">#HTML</a></li>
+                <li><a href="#">#Flexbox</a></li>
+                <li><a href="#">#CSS</a></li>
+            </ul>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer_navbar">
+            <ul>
+                <li><a href="#">#Home</a></li>
+                <li><a href="#">#Bookmark</a></li>
+                <li><a href="#">#Profile</a></li>
+            </ul>
+        </div>
+      </footer>
 </body>
 </html>
