--- a/index.html
+++ b/index.html
@@ -13,27 +13,63 @@
         <h1>Quiz App</h1>
     </header>
 </section>
-    <section class="quiz-container">
+    
+<section class="quiz-container">
+    <div><img src="./images/ribbon-svgrepo-com.png" alt="bookmark" class="card-bookmark">
+    </div>
         <div class="quiz-question">
           <h2 class="question">What property flips the axes in flexbox</h2>
         </div>
         <button>Show Answer</button>
         <div class="container-tags">
-            <ul class="tags">
-                <li><a href="#">#HTML</a></li>
-                <li><a href="#">#Flexbox</a></li>
-                <li><a href="#">#CSS</a></li>
+            <ul class="tags" role="list">
+                <li class="tags__items">#HTML</li>
+                <li class="tags__items">#Flexbox</li>
+                <li class="tags__items">#CSS</li>
             </ul>
         </div>
     </section>
-    <footer class="footer">
-        <div class="footer_navbar">
-            <ul>
-                <li><a href="#">#Home</a></li>
-                <li><a href="#">#Bookmark</a></li>
-                <li><a href="#">#Profile</a></li>
+
+    
+    <section class="quiz-container">
+        <div><img src="./images/ribbon-svgrepo-com.png" alt="bookmark" class="card-bookmark">
+        </div>
+        <div class="quiz-question">
+          <h2 class="question">What property flips the axes in flexbox</h2>
+        </div>
+        <button>Show Answer</button>
+        <div class="container-tags">
+            <ul class="tags" role="list">
+                <li class="tags__items">#HTML</li>
+                <li class="tags__items">#Flexbox</li>
+                <li class="tags__items">#CSS</li>
             </ul>
         </div>
+    </section>
+
+    <section class="quiz-container">
+        <div><img src="./images/ribbon-svgrepo-com.png" alt="bookmark" class="card-bookmark">
+        </div>
+        <div class="quiz-question">
+          <h2 class="question">What property flips the axes in flexbox</h2>
+        </div>
+        <button>Show Answer</button>
+        <div class="container-tags">
+            <ul class="tags" role="list">
+                <li class="tags__items">#HTML</li>
+                <li class="tags__items">#Flexbox</li>
+                <li class="tags__items">#CSS</li>
+            </ul>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer_navbar">
+                <a href="*"><img src="./images/house-svgrepo-com.png" alt="home" class="svg-home"></a>
+                <a href="#"><img src="./images/ribbon-svgrepo-com.png" alt="bookmark" class="svg-bookmark"></a>
+                <a href="#"><img src="./images/id-card-svgrepo-com.png" alt="profile" class="svg-profile"></a>
+        </div>
       </footer>
+
 </body>
 </html>
