--- a/profile-page/profile.html
+++ b/profile-page/profile.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=".css/profile_styles.css">
+    <link rel="icon" type="image/png" href="/images/id-card-svgrepo-com.png">
     <title>Profile</title>
 </head>
 <body>
 
+  <section class="quiz-header">
+    <header>
+        <h1>Quiz App</h1>
+    </header>
+    </section>
 
   <section class="container">
     <div class="header">
@@ -28,7 +34,7 @@
 
   <footer class="footer">
     <div class="footer_navbar">
-            <a href="#"><img src="/images/house-svgrepo-com.png" alt="home" class="footer_icons"></a>
+            <a href="/index.html"><img src="/images/house-svgrepo-com.png" alt="home" class="footer_icons"></a>
             <a href="#"><img src="/images/ribbon-svgrepo-com.png" alt="bookmark" class="footer_icons"></a>
             <a href="/profile-page/profile.html"><img src="/images/id-card-svgrepo-com.png" alt="profile" class="footer_icons"></a>
     </div>
