--- a/profile-page/profile.html
+++ b/profile-page/profile.html
@@ -34,9 +34,9 @@
 
   <footer class="footer">
     <div class="footer_navbar">
-            <a href="/index.html"><img src="/images/house-svgrepo-com.png" alt="home" class="footer_icons"></a>
-            <a href="#"><img src="/images/ribbon-svgrepo-com.png" alt="bookmark" class="footer_icons"></a>
-            <a href="/profile-page/profile.html"><img src="/images/id-card-svgrepo-com.png" alt="profile" class="footer_icons"></a>
+            <a href="/index.html"><img src="./images/house-svgrepo-com.png" alt="home" class="footer_icons"></a>
+            <a href="/bookmark-page/bookmark.html"><img src="./images/ribbon-svgrepo-com.png" alt="bookmark" class="footer_icons"></a>
+            <a href="/profile-page/profile.html"><img src="./images/id-card-svgrepo-com.png" alt="profile" class="footer_icons"></a>
     </div>
   </footer>
 
