Update files in bookmark-page and profile-page directories

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Quiz App</title>
 </head>
 <body>
@@ -17,39 +17,6 @@
 <section class="quiz-container">
     <div><img src="./images/ribbon-svgrepo-com.png" alt="bookmark" class="card-bookmark">
     </div>
-        <div class="quiz-question">
-          <h2 class="question">What property flips the axes in flexbox</h2>
-        </div>
-        <button>Show Answer</button>
-        <div class="container-tags">
-            <ul class="tags" role="list">
-                <li class="tags__items">#HTML</li>
-                <li class="tags__items">#Flexbox</li>
-                <li class="tags__items">#CSS</li>
-            </ul>
-        </div>
-    </section>
-
-    
-    <section class="quiz-container">
-        <div><img src="./images/ribbon-svgrepo-com.png" alt="bookmark" class="card-bookmark">
-        </div>
-        <div class="quiz-question">
-          <h2 class="question">What property flips the axes in flexbox</h2>
-        </div>
-        <button>Show Answer</button>
-        <div class="container-tags">
-            <ul class="tags" role="list">
-                <li class="tags__items">#HTML</li>
-                <li class="tags__items">#Flexbox</li>
-                <li class="tags__items">#CSS</li>
-            </ul>
-        </div>
-    </section>
-
-    <section class="quiz-container">
-        <div><img src="./images/ribbon-svgrepo-com.png" alt="bookmark" class="card-bookmark">
-        </div>
         <div class="quiz-question">
           <h2 class="question">What property flips the axes in flexbox</h2>
         </div>
