--- a/profile-page/profile.html
+++ b/profile-page/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".css/profile_styles.css">
+    <link rel="stylesheet" href="css/profile_styles.css">
     <link rel="icon" type="image/png" href="/images/id-card-svgrepo-com.png">
     <title>Profile</title>
 </head>
@@ -21,15 +21,20 @@
     </div>
     <div class="middle">
     <img src="/images/pinguin.png" alt="pinguin profile" class="user-pic" />
-    <h1 class="name">Mike Pinguim</h1>
+    <h1 class="name">Mike Pinguin</h1>
     </div>
   
     <div class="status">
    <button class="btn-create">Create Question </button><br/>
     <br/>
-    <h2 class="profile-status">That is your progress</h2>
-
+    <h3 class="profile-status">That is your progress</h3>
     </div>
+    <!-- <div class="status_icons">
+      <img src="/images/ribbon-svgrepo-com.png" alt="bookmark" class="bookmark-icon">
+    </div> -->
+        <div class="bookmark-counter">4
+
+        </div>
   </section>
 
   <footer class="footer">
