--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     Master Eraqus?
                   </h2>
                   <div class="card__button">
-                  <button class="card__button-answer" type="button">
+                  <button id="answer-button" onclick="toggleAnswer()" class="card__button-answer" type="button">
                     Show answer
                   </button>
                 </div>
-                  <p class="card__answer">Mark Hamill</p>
+                  <p id="answer" class="card__answer-hidden">Mark Hamill</p>
                   <ul class="card__tag-list">
                     <li class="card__tag-list-item">#kingdomheart</li>
                     <li class="card__tag-list-item">#mastereraqus</li>
